--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
         <!-- Картки зображень -->
       </div>
     </div>
-    <button type="button" class="load-more">Load more</button>
+    <button type="button" class="load-more" hidden>Load more</button>
     <script src="index.js" type="module"></script>
   </body>
 </html>
