--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,10 @@
           placeholder="Search images..."
         />
         <button type="submit" class="form-button">Search</button>
+        <label>
+          <input type="checkbox" class="checkbox" />
+          with Infinity Scroll
+        </label>
       </form>
     </div>
 
@@ -25,7 +29,8 @@
       <div class="gallery">
         <!-- Картки зображень -->
       </div>
-      <button type="button" class="load-more hidden">Load more</button>
+      <!-- <button type="button" class="load-more hidden">Load more</button> -->
+      <div class="js-scroll"></div>
     </div>
     <script src="index.js" type="module"></script>
   </body>
