--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
       </div>
       <!-- <button type="button" class="load-more hidden">Load more</button> -->
       <div class="js-scroll"></div>
+      <div id="pagination" class="tui-pagination"></div>
     </div>
     <script src="index.js" type="module"></script>
   </body>
